apps/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      service: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: n8n
      annotations:
        proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: n8n
          image: n8nio/n8n:2.4.6
          command:
            - /bin/sh
          args:
            - -c
            - n8n start
          ports:
            - containerPort: 5678
          resources:
            requests:
              memory: 1Gi
              cpu: 1000m
          volumeMounts:
            - name: n8n-claim0
              mountPath: /home/node/.n8n
      restartPolicy: Always
      volumes:
        - name: n8n-claim0
          persistentVolumeClaim:
            claimName: n8n-claim0
