apps/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n
  labels:
    service: n8n
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    service: n8n
